# FlickDj

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
src/smartcamera/: __init__.py  __main__.py  app.py  camera.py  cli.py  commands.py  config.py  gestures.py  hand_selector.py  media_keys.py  playback.py  spotify.py
tests/: test_gestures.py  test_hand_selector.py  test_media_keys.py  test_playback.py  test_spotify.py
