[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "flickdj"
version = "0.1.0"
description = "Control Spotify with webcam hand flicks."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
  { name = "Benjamin" },
]
keywords = [
  "spotify",
  "mediapipe",
  "opencv",
  "gesture-control",
  "computer-vision",
  "webcam",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Win32 (MS Windows)",
  "Intended Audience :: End Users/Desktop",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Multimedia :: Sound/Audio :: Players",
]
dependencies = [
  "mediapipe>=0.10.14",
  "opencv-python>=4.9.0.80",
  "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[project.scripts]
flickdj = "smartcamera.cli:main"
smartcamera = "smartcamera.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
